--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Can You Guess This Sound?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Arthur & Chip Troll Chip's Producer😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Body Remembers All | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>10 TradeStation Algo Entries: Code & Backtest Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Essence of the Spiritual Path</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -959,7 +959,7 @@
                     <div class="video-info">
                         <h3>Touring the World with my Best Friends (ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1091,7 +1091,7 @@
                     <div class="video-info">
                         <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1225,7 +1225,7 @@
                     <div class="video-info">
                         <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>10 TradeStation Algo Entries: Code & Backtest Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5985,7 +5985,7 @@
                         <div class="video-info">
                             <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6020,7 +6020,7 @@
                         <div class="video-info">
                             <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>The Body Remembers All | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Essence of the Spiritual Path</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Can You Guess This Sound?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur & Chip Troll Chip's Producer😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10573,7 +10573,7 @@
                         <div class="video-info">
                             <h3>Touring the World with my Best Friends (ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
